--- a/publico/index.html
+++ b/publico/index.html
@@ -15,11 +15,11 @@
           <a class="nav-link" href="cadastro.html">Cadastro</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="relatorio.html">Relatorio</a>
+          <a class="nav-link" href="/relatorio">Relatorio</a>
         </li>
       </ul>
       <br>
-      <h1 style="text-align: center;">Tcar Frotas </h1>
+      <h1 style="text-align: center;">Seja bem Vindo ao App Tcar Frotas </h1>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
